TRUNK-4224 SonarQube - method invokes inefficient Number constructor; use static valueOf instead